[gd_scene load_steps=3 format=3 uid="uid://xb6gyiyw2qth"]

[ext_resource type="Script" path="res://Levels/interaction.gd" id="1_y1d8j"]
[ext_resource type="Texture2D" uid="uid://b6k0rfutupdbe" path="res://icon.svg" id="2_optnx"]

[node name="InteractionContainer" type="VBoxContainer"]
offset_right = 136.0
offset_bottom = 175.0
script = ExtResource("1_y1d8j")

[node name="InteractionButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("2_optnx")

[node name="InteractionTextLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]gamer[/center]"
fit_content = true

[connection signal="button_down" from="InteractionButton" to="." method="_on_interaction_button_button_down"]
